# moniuszko

./: Cargo.toml  PKGBUILD  build.rs  readme.md
assets/: org.moniuszko.desktop
assets/gettext/: Makefile  en.po  pl.po
assets/gettext/en/LC_MESSAGES/: moniuszko.mo
assets/gettext/pl/LC_MESSAGES/: moniuszko.mo
assets/locales/en_UK/: main.ftl
assets/locales/pl_PL/: main.ftl
src/: commands.rs  config.rs  constants.rs  database.rs  languages.rs  main.rs  mpris.rs  preferences.rs  style.css  tray.rs  utils.rs  window.rs
src/control/: commands.rs  commands_history.rs  history.rs  mod.rs  modify_playlist_action.rs  mpris.rs  playback_state.rs  playlist_store.rs  random_data.rs  tray.rs
src/data/: album.rs  artist.rs  category.rs  genre.rs  grouping_mode.rs  mod.rs  object_id.rs  playback_status.rs  playlist_entry_uuid.rs  playlist_uuid.rs  repeat_mode.rs  track.rs
src/database/: mod.rs  musicbrainz.rs  scan.rs  traverse_files.rs
src/db/: database.rs  database_builder.rs  file_data.rs  mod.rs  scan.rs  search_result.rs
src/media_library/: grouping_mode.rs  mod.rs  ui.rs  ui_item.rs
src/player/: mod.rs  playback_state.rs  ui.rs
src/playlist/: box_with_data.rs  box_with_playlist_entry.rs  dnd_item.rs  mod.rs  ui.rs  ui_item.rs
src/resources/: info_panel.ui  media_panel.ui  playlist_panel.ui  preferences.ui  resources.gresource.xml  window.ui
src/ui/: box_with_playlist_entry.rs  dnd_item.rs  info_panel.rs  media_library.rs  media_library_item.rs  media_panel.rs  mod.rs  player.rs  playlist.rs  playlist_item.rs  playlist_panel.rs  preferences.rs  window.rs
