[package]
name = "moniuszko"
version = "1.2.0"
edition = "2024"

[dependencies]
gio = { version = "0.22.2", features = ["v2_74"] }
gtk4 = { version = "0.11.1", features = ["v4_20"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8"] }
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ustr = { version = "1.1.0", features = ["serde"] }
dirs = "6.0.0"
const_format = "0.2.35"
anyhow = "1.0.102"
lofty = "0.24.0"
rand = "0.10.1"
itertools = "0.14.0"
musicbrainz_rs = { version = "0.13.0", features = ["sync"] }
zbus = "5.15.0"
async-channel = "2.5.0"
ksni = { version = "0.3.4", default-features = false, features = ["async-io"] }
image = "0.25.10"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
rand_pcg = "0.10.2"

[build-dependencies]
glib-build-tools = "0.22.0"
